--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -1,18 +1,69 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Graphic Design</title>
-<link rel="icon" href="Icons/icon png.png">
+    <script src="JS/jquery.js"></script>
+    <script src="JS/common_jquery.js"></script>
+    <script src="JS/gfx_js.js"></script>
+    <meta charset="utf-8">
+    <title>Graphic Design</title>
+    <link rel="icon" href="Icons/icon png.png">
+    <link href="CSS/gfx_styles.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
 <body>
-  <div id= "wrapper">
 
-	<div id="footer">
-		<h4> COPYRIGHT JING WEI LI 2017</h4>
-		</div>
-  </div>
+<div id="nav">
+    <ul>
+        <a href="index.html">HOME</a>
+        <a href="Bio.html">ABOUT</a>
+        <a href="Resume.html">RESUME</a>
+        <a href="Graphic Design.html">GRAPHIC DESIGN</a>
+        <a href="Projects.html">PROJECTS</a>
+        <a href="Games.html">GAMES</a>
+        <a href="Contacts.html">CONTACT</a>
+    </ul>
+</div>
+
+<div id="showcase"></div>
+
+<div id="work">
+    <h1> Works</h1>
+</div>
+
+<div id="design">
+    <!--<a href="https://www.behance.net/gallery/47281675/2026-Time-Capsule"><img src="images/gfx1.jpg"></a>-->
+    <div id="img1x">
+        <img src="images/gfx1.jpg">
+        <a class="shadow" href="#flickr">Featured Project - 2026 Time Capsule</a>
+    </div>
+
+
+    <div id="img2">
+        <img src="images/gfx2.png" width="425px" height="400px">
+    </div>
+    
+    <div id = "img3">
+        <img src="images/gfx3.jpg" width="400px" height="400px">
+    </div>
+
+    <div id="behance">
+        <a href="https://www.behance.net/MrProLi">Behance Portfolio</a>
+    </div>
+
+    <div id="flickr">
+        <a href="https://www.flickr.com/photos/154270674@N02/">Flickr Profie</a>
+    </div>
+</div>
+
+<div id="design2">
+
+</div>
+
+
+
+<div id="footer" class="_center">
+    <h4> &copy; JING WEI LI 2017</h4>
+</div>
 
 </body>
 </html>
