--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<script src="JS/jquery.js"></script>
+    <script src="JS/jquery.js"></script>
     <script src="JS/main.js"></script>
     <meta charset="UTF-8">
     <title>Hi, I'm Li</title>
@@ -9,71 +9,75 @@
     <link href="CSS/styles.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
-<body id ="bod">
-    <div id ="nav">
-        <ul>
-            <a href="index.html">HOME</a>
-            <a target="_blank" href="Bio.html">ABOUT</a>
-            <a target="_blank" href="Resume.html">RESUME</a>
-            <a target="_blank" href="Graphic Design.html">GRAPHIC DESIGN</a>
-            <a target="_blank" href="Projects.html">PROJECTS</a>
-            <a target="_blank" href="Games.html">GAMES</a>
-            <a target="_blank" href="Contacts.html">CONTACT</a>
+<body id="bod">
+<div id="nav">
+    <ul>
+        <a href="index.html">HOME</a>
+        <a href="Bio.html">ABOUT</a>
+        <a href="Resume.html">RESUME</a>
+        <a href="Graphic Design.html">GRAPHIC DESIGN</a>
+        <a href="Projects.html">PROJECTS</a>
+        <a href="Games.html">GAMES</a>
+        <a href="Contacts.html">CONTACT</a>
 
+    </ul>
+</div>
+
+<div id="bg">
+    <img src="images/cover_png.png">
+</div>
+
+<div id="main">
+    <div id="intro">
+        <h1>JING WEI LI</h1>
+        <h2>Designer,</h2>
+        <h2>Programmer &</h2>
+        <h2>Computer Engineer.</h2>
+    </div>
+
+    <div id="social_media">
+        <ul class="center_text">
+            <a id="sm1" target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="images/fb.png"
+                                                                                           width="50"
+                                                                                           height="50"></a>
+            <a id="sm2" target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="images/linkedin.png"
+                                                                                            width="50"
+                                                                                            height="50"></a>
+            <a id="sm3" target="_blank" href="https://twitter.com/MrProLi"><img src="images/twitter.png" width="50"
+                                                                                height="50"></a>
+            <a id="sm4" target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
+                    src="images/yt.png" width="50" height="50"></a>
+            <!--<a target="_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src="images/flickr.png"-->
+            <!--width="50" height="50"></a>-->
+            <a id="sm5" target="_blank" href="https://github.com/ljw980105/"><img src="images/github.png" width="50"
+                                                                                  height="50"></a>
         </ul>
     </div>
+</div>
 
-    <div id="bg">
-        <img src = "images/cover_png.png">
-    </div>
+<!--<div id="contents">-->
+<!--<h1>FEATURED CONTENTS</h1>-->
+<!--<div id="images">-->
+<!--&lt;!&ndash;<a id ="first" href="Graphic%20Design.html"><img src="images/graphic_design.jpg"></a>&ndash;&gt;-->
+<!--&lt;!&ndash;<a href="Projects.html"><img src="images/projects.jpg"></a>&ndash;&gt;-->
+<!--&lt;!&ndash;<a href="Games.html"><img src="images/GAME.jpg"></a>&ndash;&gt;-->
+<!--<a id="first" href="Graphic%20Design.html"><img src="images/banner_graphic_design.jpg"></a>-->
+<!--<a href="Projects.html"><img src="images/banner_projects.jpg"></a>-->
+<!--<a href="Games.html"><img src="images/BANNER_GAMES.jpg"></a>-->
+<!--</div>-->
+<!--</div>-->
 
-    <div id="main">
-        <div id="intro">
-            <h1>JING WEI LI</h1>
-            <h2>Designer,</h2>
-            <h2>Programmer &</h2>
-            <h2>Computer Engineer.</h2>
-        </div>
+<div id="gfx" class="stylez">
+    <a href="Graphic%20Design.html">GRAPHIC DESIGN PORTFOLIO</a>
+</div>
 
-        <div id = "social_media">
-            <ul class="center_text">
-                <a id = "sm1" target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="images/fb.png" width="50"
-                                                                                      height="50"></a>
-                <a id = "sm2"  target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="images/linkedin.png" width="50"
-                                                                                       height="50"></a>
-                <a id = "sm3"  target="_blank" href="https://twitter.com/MrProLi"><img src="images/twitter.png" width="50" height="50"></a>
-                <a id = "sm4"  target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
-                        src="images/yt.png" width="50" height="50"></a>
-                <!--<a target="_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src="images/flickr.png"-->
-                <!--width="50" height="50"></a>-->
-                <a id = "sm5"  target="_blank" href="https://github.com/ljw980105/"><img src = "images/github.png" width="50" height="50"></a>
-            </ul>
-        </div>
-    </div>
+<div id="proj" class="stylez">
+    <a href="Projects.html">FEATURED PROJECTS</a>
+</div>
 
-    <!--<div id="contents">-->
-        <!--<h1>FEATURED CONTENTS</h1>-->
-        <!--<div id="images">-->
-            <!--&lt;!&ndash;<a id ="first" href="Graphic%20Design.html"><img src="images/graphic_design.jpg"></a>&ndash;&gt;-->
-            <!--&lt;!&ndash;<a href="Projects.html"><img src="images/projects.jpg"></a>&ndash;&gt;-->
-            <!--&lt;!&ndash;<a href="Games.html"><img src="images/GAME.jpg"></a>&ndash;&gt;-->
-            <!--<a id="first" href="Graphic%20Design.html"><img src="images/banner_graphic_design.jpg"></a>-->
-            <!--<a href="Projects.html"><img src="images/banner_projects.jpg"></a>-->
-            <!--<a href="Games.html"><img src="images/BANNER_GAMES.jpg"></a>-->
-        <!--</div>-->
-    <!--</div>-->
-
-    <div id="gfx" class="stylez">
-        <a href="Graphic%20Design.html">GRAPHIC DESIGN PORTFOLIO</a>
-    </div>
-
-    <div id="proj" class="stylez">
-        <a href="Projects.html">FEATURED PROJECTS</a>
-    </div>
-
-	<div id="footer" class="_center">
-        <h4> &copy; JING WEI LI 2017</h4>
-    </div>
+<div id="footer" class="_center">
+    <h4> &copy; JING WEI LI 2017</h4>
+</div>
 
 </body>
 </html>
