Resume Page Started

--- a/Resume.html
+++ b/Resume.html
@@ -3,6 +3,7 @@
 <head>
     <script src="JS/jquery.js"></script>
     <script src="JS/common_jquery.js"></script>
+    <script src="JS/resume_js.js"></script>
     <meta charset="utf-8">
     <title>Digital Resume</title>
     <link rel="icon" href="Icons/icon png.png">
@@ -22,8 +23,54 @@
     </ul>
 </div>
 
+<div id="progress">
+    <ul>
+        <a href="#intro">WELCOME</a>
+        <a href="#sections">SECTIONS</a>
+        <a href="#edu">EDUCATION</a>
+        <a href="#experience">EXPERIENCE</a>
+        <a href="#skills">SKILLS</a>
+        <a href="#nav">BACK TO TOP</a>
+    </ul>
+</div>
+
+<!--<div id = "experience">-->
+    <!--<h1> FIRST ROBOtics</h1>-->
+<!--</div>-->
+
+<!--<div class="fullscreen-bg">-->
+    <!--<video loop muted autoplay class="fullscreen-bg__video">-->
+        <!--<source src="resume_bg.mp4" type="video/mp4">-->
+    <!--</video>-->
+<!--</div>-->
+
+<div id ="intro">
+    <h1> Welcome to My Digital Resume</h1>
+    <a href="ResumeJune17.pdf">or visit the standard resume</a>
+</div>
+
+<div id = "quick_guide">
+    <h1 class="thin_title" style="color: rgba(221,51,34,1)">Sections</h1>
+</div>
+
 <div id="footer" class="_center">
     <h4> &copy; JING WEI LI 2017</h4>
+</div>
+
+<div id = "sections">
+
+</div>
+
+<div id = "edu">
+
+</div>
+
+<div id="experience">
+
+</div>
+
+<div id="skills">
+
 </div>
 
 </body>
