Added Nav Section in Resume

--- a/Resume.html
+++ b/Resume.html
@@ -25,11 +25,11 @@
 
 <div id="progress">
     <ul>
-        <a href="#intro">WELCOME</a>
-        <a href="#sections">SECTIONS</a>
-        <a href="#edu">EDUCATION</a>
-        <a href="#experience">EXPERIENCE</a>
-        <a href="#skills">SKILLS</a>
+        <a id = "p1" href="#intro">WELCOME</a>
+        <a id = "p2" href="#quick_guide">SECTIONS</a>
+        <a id = "p3" href="#edu">EDUCATION</a>
+        <a id = "p4" href="#experience">EXPERIENCE</a>
+        <a id = "p5" href="#skills">SKILLS</a>
         <a href="#nav">BACK TO TOP</a>
     </ul>
 </div>
@@ -50,15 +50,33 @@
 </div>
 
 <div id = "quick_guide">
-    <h1 class="thin_title" style="color: rgba(221,51,34,1)">Sections</h1>
-</div>
-
-<div id="footer" class="_center">
-    <h4> &copy; JING WEI LI 2017</h4>
-</div>
-
-<div id = "sections">
-
+    <!--<h1 class="thin_title">Sections</h1>-->
+    <div id="wrapper">
+        <div id="col1">
+            <div id = "col1_item1">
+                <a href="Bio.html">ABOUT</a>
+            </div>
+            <div id="col1_item2">
+                <a href="#edu">EDUCATION</a>
+            </div>
+        </div>
+        <div id="col2">
+            <div id = "col2_item1">
+                <a href="#experience">EXPERIENCE</a>
+            </div>
+            <div id="col2_item2">
+                <a href="#skills">SKILLS</a>
+            </div>
+        </div>
+        <div id="col3">
+            <div id = "col3_item1">
+                <a href="Projects.html">PROJECTS</a>
+            </div>
+            <div id="col3_item2">
+                <a href="Contacts.html">CONTACT</a>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div id = "edu">
@@ -71,6 +89,10 @@
 
 <div id="skills">
 
+</div>
+
+<div id="footer" class="_center">
+    <h4> &copy; JING WEI LI 2017</h4>
 </div>
 
 </body>
