--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -5,7 +5,7 @@
     <script src="JS/common_jquery.js"></script>
     <script src="JS/gfx2_js.js"></script>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title>Graphic Design</title>
     <link rel="icon" href="Icons/icon png.png">
     <link href="CSS/gfx2.css" rel="stylesheet" type="text/css" media="screen">
