--- a/Resume.html
+++ b/Resume.html
@@ -25,12 +25,19 @@
 
 <div id="progress">
     <ul>
-        <a id = "p1" href="#intro">WELCOME</a>
-        <a id = "p2" href="#quick_guide">SECTIONS</a>
-        <a id = "p3" href="#edu">EDUCATION</a>
-        <a id = "p4" href="#experience">EXPERIENCE</a>
-        <a id = "p5" href="#skills">SKILLS</a>
-        <a href="#nav">BACK TO TOP</a>
+        <!--<a id = "p1" href="#intro">WELCOME</a>-->
+        <!--<a id = "p2" href="#quick_guide">SECTIONS</a>-->
+        <!--<a id = "p3" href="#edu">EDUCATION</a>-->
+        <!--<a id = "p4" href="#experience">EXPERIENCE</a>-->
+        <!--<a id = "p5" href="#skills">SKILLS</a>-->
+        <!--<a id = "p6" href="#awards">AWARDS</a>-->
+        <a id = "p1">WELCOME</a>
+        <a id = "p2">SECTIONS</a>
+        <a id = "p3">EDUCATION</a>
+        <a id = "p4">EXPERIENCE</a>
+        <a id = "p5">SKILLS</a>
+        <a id = "p6">AWARDS</a>
+        <a id = "p7">BACK TO TOP</a>
     </ul>
 </div>
 
@@ -80,14 +87,63 @@
 </div>
 
 <div id = "edu">
-
+    <h1>EDUCATION</h1>
+    <div id="wrap">
+        <div id = "left_col">
+            <!--<img src="images/rpilogo.jpg" width="400px" height="400px">-->
+            <h2>RENSSELAER POLYTECHNIC <br/>INSTITUTE (RPI)</h2>
+            <h3>2016-2020</h3>
+            <h5>B.S. Electrical Engineering & Computer Engineering </h5>
+            <h4>m a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.</h4>
+        </div>
+        <div id = "right_col">
+            <h2>NEWTOWN HIGH SCHOOL <br/> ELMHURST, NY</h2>
+            <h3>2013-2016</h3>
+            <h5>High School Diploma </h5>
+            <h4>m a paragraph. Click here to add your own text and edit me. It’s easy. Just click “Edit Text” or double click me to add your own content and make changes to the font. Feel free to drag and drop me anywhere you like on your page. I’m a great place for you to tell a story and let your users know a little more about you.</h4>
+            <!--<img src="images/rpilogo.jpg" width="400px" height="400px">-->
+        </div>
+    </div>
 </div>
 
 <div id="experience">
-
+    <div id = "exp_wrapper">
+        <div id="exp_left">
+            <div id="exp1">
+                <h2>HEAD PROGRAMMER & VIDEO EDITOR </h2>
+                <h3>2013-2016, FIRST ROBOTICS TEAM 1635</h3>
+                <h4>•	Developed a Java algorithm to ensure the robot will drive straight even if it’s made off-course by external forces. It is achieved using an onboard gyroscope. (See the video below)<br/>
+                    •	Taught a group of 20 students basics of computer science.<br/>
+                    •	Utilized Java and Arduino to program WPILib – based robots. The 2016 robot ranked #5 in NYC Regional Competition.<br/>
+                    •	Studied and practiced programming techniques including variables, functions, loops, classes and basic algorithms.<br/>
+                    •	Filmed and produced professional videos documenting the building season and the competitions, receiving more than 20,000 views. Developed mastery of video editing software including Adobe Premiere Pro, Adobe After Effects as well as Adobe Audition.<br/>
+                    •	Developed strong leadership, communication and time management skills dealing with various challenges in the 6-week designing process.<br/>
+                    •	Winner of the MVP Award sponsored by FIRST.<br/></h4>
+            </div>
+            <div id="exp3">
+                <h2>GRAPHIC DESIGNER & WEB DESIGNER</h2>
+                <H3>2017-PRESENT, RENSSELAER UNION</H3>
+                <h4>•	Apply graphic design skills in creating logos, posters, brochures, and other designs using Adobe Illustrator, Adobe InDesign and Adobe Photoshop.<br/>
+                    •	Maintain RPI Union Websites using Drupal.</h4>
+            </div>
+        </div>
+        <div id="exp_right">
+            <div id="exp2">
+                <h2>ELECTRONIC MANUFACTURING & <br/>AUTOCAD INTERN </h2>
+                <h3>2016, QUADLOGICS CONTROL CORP</h3>
+                <h4>•	Drafted 10+ AutoCAD schematics<br/> of complex electrical products to enable<br/> smooth production of electronics.<br/>
+                    •	Verified 200+ service statuses of electrical<br/> products using TeraTerm in order to increase<br/> the satisfactionrating of the company.<br/>
+                    •	Assisted with electronic manufacturing<br/> processes such as soldering.<br/></h4>
+            </div>
+        </div>
+    </div>
 </div>
 
 <div id="skills">
+
+</div>
+
+<div id="awards">
 
 </div>
 
