Skill Page Done: Canceling Auto Slider, Formatting Error Still Present on Mobile

--- a/Resume.html
+++ b/Resume.html
@@ -25,18 +25,11 @@
 
 <div id="progress">
     <ul>
-        <!--<a id = "p1" href="#intro">WELCOME</a>-->
-        <!--<a id = "p2" href="#quick_guide">SECTIONS</a>-->
-        <!--<a id = "p3" href="#edu">EDUCATION</a>-->
-        <!--<a id = "p4" href="#experience">EXPERIENCE</a>-->
-        <!--<a id = "p5" href="#skills">SKILLS</a>-->
-        <!--<a id = "p6" href="#awards">AWARDS</a>-->
         <a id = "p1">WELCOME</a>
         <a id = "p2">SECTIONS</a>
         <a id = "p3">EDUCATION</a>
         <a id = "p4">EXPERIENCE</a>
         <a id = "p5">SKILLS</a>
-        <a id = "p6">AWARDS</a>
         <a id = "p7">BACK TO TOP</a>
     </ul>
 </div>
@@ -142,24 +135,28 @@
 <div id="skills">
     <div id="skills_text">
         <h1>SKILLS</h1>
-        <!--<h2 id="skill_description">#1. Languages</h2>-->
     </div>
     <div id="skills_wrapper">
+        <!--<div id = "left_arrow" onclick="plusDivs(-1)">-->
         <div id = "left_arrow">
             <img src="images/arrow_l2.png">
         </div>
         <div id="skill_content">
             <img src="images/skl1.png">
+            <!--<img class="mySlides" src="images/skl1.png">-->
+            <!--<img class="mySlides" src="images/skl2.png">-->
+            <!--<img class="mySlides" src="images/skl3x.png">-->
+            <!--<img class="mySlides" src="images/skl4.png">-->
+            <!--<img class="mySlides" src="images/skl5.png">-->
+            <!--<img class="mySlides" src="images/skl6.png">-->
+            <!--<img class="mySlides" src="images/skl7.png">-->
         </div>
+        <!--<div id="right_arrow" onclick="plusDivs(+1)">-->
         <div id="right_arrow">
             <img src="images/arrow_r2.png">
         </div>
     </div>
 
-
-</div>
-
-<div id="awards">
 
 </div>
 
