Animated Scroll Added to the Quickguide Section of Resume

--- a/Resume.html
+++ b/Resume.html
@@ -57,15 +57,18 @@
                 <a href="Bio.html">ABOUT</a>
             </div>
             <div id="col1_item2">
-                <a href="#edu">EDUCATION</a>
+                <!--<a href="#edu">EDUCATION</a>-->
+                <h6 id="q1">EDUCATION</h6>
             </div>
         </div>
         <div id="col2">
             <div id = "col2_item1">
-                <a href="#experience">EXPERIENCE</a>
+                <!--<a href="#experience">EXPERIENCE</a>-->
+                <h6 id="q2">EXPERIENCE</h6>
             </div>
             <div id="col2_item2">
-                <a href="#skills">SKILLS</a>
+                <!--<a href='#skills'>SKILLS</a>-->
+                <h6 id="q3">SKILLS</h6>
             </div>
         </div>
         <div id="col3">
