Apple-Styled Index

--- a/index_original.html
+++ b/index_original.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
     <script src="JS/jquery.js"></script>
-    <script src="JS/main2.js"></script>
+    <script src="JS/main.js"></script>
     <meta charset="UTF-8">
     <title>Hi, I'm Li</title>
     <link rel="icon" href="images/icon png.png">
-    <link href="CSS/styles2.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="CSS/styles.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
 <body id="bod">
@@ -24,7 +24,7 @@
 </div>
 
 <div id="bg">
-    <img src="images/cover_png2.png">
+    <img src="images/cover_png.png">
 </div>
 
 <div id="main">
@@ -47,31 +47,33 @@
                                                                                 height="50"></a>
             <a id="sm4" target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
                     src="images/yt.png" width="50" height="50"></a>
+            <!--<a target="_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src="images/flickr.png"-->
+            <!--width="50" height="50"></a>-->
             <a id="sm5" target="_blank" href="https://github.com/ljw980105/"><img src="images/github.png" width="50"
                                                                                   height="50"></a>
         </ul>
     </div>
 </div>
 
+<!--<div id="contents">-->
+<!--<h1>FEATURED CONTENTS</h1>-->
+<!--<div id="images">-->
+<!--&lt;!&ndash;<a id ="first" href="Graphic%20Design.html"><img src="images/graphic_design.jpg"></a>&ndash;&gt;-->
+<!--&lt;!&ndash;<a href="Projects.html"><img src="images/projects.jpg"></a>&ndash;&gt;-->
+<!--&lt;!&ndash;<a href="Games.html"><img src="images/GAME.jpg"></a>&ndash;&gt;-->
+<!--<a id="first" href="Graphic%20Design.html"><img src="images/banner_graphic_design.jpg"></a>-->
+<!--<a href="Projects.html"><img src="images/banner_projects.jpg"></a>-->
+<!--<a href="Games.html"><img src="images/BANNER_GAMES.jpg"></a>-->
+<!--</div>-->
+<!--</div>-->
 
-<div id="wrapper">
-    <div id="col1">
-        <div id="gfx" class="stylez">
-            <a href="Graphic%20Design.html">GRAPHIC DESIGN PORTFOLIO</a>
-        </div>
-    </div>
-    <div id="col2">
-        <div id="proj" class="stylez">
-            <a href="Projects.html">FEATURED<br>PROJECTS</a>
-        </div>
-    </div>
-    <div id="col3">
-        <div id="resume" class="stylez">
-            <a href="Resume.html">DIGITAL<br>RESUME</a>
-        </div>
-    </div>
+<div id="gfx" class="stylez">
+    <a href="Graphic%20Design.html">GRAPHIC DESIGN PORTFOLIO</a>
 </div>
 
+<div id="proj" class="stylez">
+    <a href="Projects.html">FEATURED PROJECTS</a>
+</div>
 
 <div id="footer" class="_center">
     <h4> &copy; JING WEI LI 2017</h4>
