Image Prob May Be Solved

--- a/Games.html
+++ b/Games.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Let's Play A Game</title>
-<link rel="icon" href="Icons/icon png.png">
+<link rel="icon" href="Images/icon png.png">
 </head>
 
 <body>
