--- a/Graphic Design.html
+++ b/Graphic Design.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
     <title>Graphic Design</title>
-    <link rel="icon" href="Icons/icon png.png">
+    <link rel="icon" href="Images/icon png.png">
     <link href="CSS/gfx2.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
@@ -34,34 +34,34 @@
 <div id="design">
     <div id="col1">
         <div id="img1" class="imgContainer">
-            <img src="images/graphics1.jpg" height="280px" width="420px">
+            <img src="Images/graphics1.jpg" height="280px" width="420px">
             <a class="shadow" href="https://www.behance.net/gallery/47281675/2026-Time-Capsule">Featured Project <br /> 2026 Time Capsule</a>
         </div>
 
         <div id="img4" class="imgContainer">
-            <img src="images/graphics3.jpg" height="630px" width="420px">
+            <img src="Images/graphics3.jpg" height="630px" width="420px">
             <a class="shadow" href="https://www.behance.net/gallery/47687973/Robotics-Recruitment-Poster">Robotics Poster</a>
         </div>
     </div>
     <div id="col2">
         <div id="img2" class="imgContainer">
-            <img src="images/graphics2.jpg" height="420px" width="420px">
+            <img src="Images/graphics2.jpg" height="420px" width="420px">
             <a class="shadow" href=https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design>Regular Art</a>
         </div>
 
         <div id="behance">
-            <img src="images/beh.jpg" height="420px" width="420px">
+            <img src="Images/beh.jpg" height="420px" width="420px">
             <a href="https://www.behance.net/MrProLi">Behance Portfolio</a>
         </div>
     </div>
     <div id="col3">
         <div id="img3" class="imgContainer">
-            <img src="images/gfx2.png" height="390px" width="420px">
+            <img src="Images/gfx2.png" height="390px" width="420px">
             <a class="shadow" href=https://www.behance.net/gallery/52343049/RPI-Class-of-2021-Sticker-Design>2021 Class <br /> Stickers</a>
         </div>
 
         <div id="flickr">
-            <img src="images/flk.jpg" height="420px" width="420px">
+            <img src="Images/flk.jpg" height="420px" width="420px">
             <a href="https://www.flickr.com/photos/154270674@N02/">Flickr Profie</a>
         </div>
     </div>
