--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <script src="JS/main2.js"></script>
     <meta charset="UTF-8">
     <title>Hi, I'm Li</title>
-    <link rel="icon" href="images/icon png.png">
+    <link rel="icon" href="Images/icon png.png">
     <link href="CSS/styles2.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
@@ -24,7 +24,7 @@
 </div>
 
 <div id="bg">
-    <img src="images/cover_png2.png">
+    <img src="Images/cover_png2.png">
 </div>
 
 <div id="main">
@@ -37,17 +37,17 @@
 
     <div id="social_media">
         <ul class="center_text">
-            <a id="sm1" target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="images/fb.png"
+            <a id="sm1" target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="Images/fb.png"
                                                                                            width="50"
                                                                                            height="50"></a>
-            <a id="sm2" target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="images/linkedin.png"
+            <a id="sm2" target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="Images/linkedin.png"
                                                                                             width="50"
                                                                                             height="50"></a>
-            <a id="sm3" target="_blank" href="https://twitter.com/MrProLi"><img src="images/twitter.png" width="50"
+            <a id="sm3" target="_blank" href="https://twitter.com/MrProLi"><img src="Images/twitter.png" width="50"
                                                                                 height="50"></a>
             <a id="sm4" target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
-                    src="images/yt.png" width="50" height="50"></a>
-            <a id="sm5" target="_blank" href="https://github.com/ljw980105/"><img src="images/github.png" width="50"
+                    src="Images/yt.png" width="50" height="50"></a>
+            <a id="sm5" target="_blank" href="https://github.com/ljw980105/"><img src="Images/github.png" width="50"
                                                                                   height="50"></a>
         </ul>
     </div>
