--- a/Contacts.html
+++ b/Contacts.html
@@ -6,7 +6,7 @@
     <script src="JS/contact_js.js"></script>
     <meta charset="utf-8">
     <title>Contact Me</title>
-    <link rel="icon" href="Icons/icon png.png">
+    <link rel="icon" href="Images/icon png.png">
     <link href="CSS/contacts_css.css" type="text/css" rel="stylesheet" media="screen">
 </head>
 
@@ -29,26 +29,26 @@
 </div>
 
 <div id = "phone">
-    <img id = "p_icon" src="images/phone2.png">
+    <img id = "p_icon" src="Images/phone2.png">
 </div>
 
 <div id="email">
-    <img id = "e_icon" src="images/email2.png">
+    <img id = "e_icon" src="Images/email2.png">
 </div>
 
 
 <div id = "social_media">
     <ul id = "sub_sm" class="center_text">
-        <a id = "sm1" target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="images/fb.png" width="100"
+        <a id = "sm1" target="_blank" href="https://www.facebook.com/li.jingwei.94"><img src="Images/fb.png" width="100"
                                                                                          height="100"></a>
-        <a id = "sm2"  target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="images/linkedin.png" width="100"
+        <a id = "sm2"  target="_blank" href="https://www.linkedin.com/in/jingweili2/"><img src="Images/linkedin.png" width="100"
                                                                                            height="100"></a>
-        <a id = "sm3"  target="_blank" href="https://twitter.com/MrProLi"><img src="images/twitter.png" width="100" height="100"></a>
+        <a id = "sm3"  target="_blank" href="https://twitter.com/MrProLi"><img src="Images/twitter.png" width="100" height="100"></a>
         <a id = "sm4"  target="_blank" href="https://www.youtube.com/channel/UC33WP6-Af8Oy7SGzZm5mxng"><img
-                src="images/yt.png" width="100" height="100"></a>
+                src="Images/yt.png" width="100" height="100"></a>
         <!--<a target="_blank" href="https://www.flickr.com/photos/154270674@N02/"><img src="images/flickr.png"-->
         <!--width="50" height="50"></a>-->
-        <a id = "sm5"  target="_blank" href="https://github.com/ljw980105/"><img src = "images/github.png" width="100" height="100"></a>
+        <a id = "sm5"  target="_blank" href="https://github.com/ljw980105/"><img src = "Images/github.png" width="100" height="100"></a>
     </ul>
 </div>
 
