--- a/Resume.html
+++ b/Resume.html
@@ -6,7 +6,7 @@
     <script src="JS/resume_js.js"></script>
     <meta charset="utf-8">
     <title>Digital Resume</title>
-    <link rel="icon" href="Icons/icon png.png">
+    <link rel="icon" href="Images/icon png.png">
     <link href="CSS/resume_css.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
@@ -142,10 +142,10 @@
     <div id="skills_wrapper">
         <!--<div id = "left_arrow" onclick="plusDivs(-1)">-->
         <div id = "left_arrow">
-            <img src="images/arrow_l2.png">
+            <img src="Images/arrow_l2.png">
         </div>
         <div id="skill_content">
-            <img src="images/skl1.png">
+            <img src="Images/skl1.png">
             <!--<img class="mySlides" src="images/skl1.png">-->
             <!--<img class="mySlides" src="images/skl2.png">-->
             <!--<img class="mySlides" src="images/skl3x.png">-->
@@ -156,7 +156,7 @@
         </div>
         <!--<div id="right_arrow" onclick="plusDivs(+1)">-->
         <div id="right_arrow">
-            <img src="images/arrow_r2.png">
+            <img src="Images/arrow_r2.png">
         </div>
     </div>
 
