Project Dropdown Menu Added Across the Entire Site

--- a/Contacts.html
+++ b/Contacts.html
@@ -8,20 +8,30 @@
     <title>Contact Me</title>
     <link rel="icon" href="Images/icon png.png">
     <link href="CSS/contacts_css.css" type="text/css" rel="stylesheet" media="screen">
+    <link href="CSS/common.css" type="text/css" rel="stylesheet" media="screen">
 </head>
 
 <body>
 
-<div id="nav">
-    <ul>
-        <a href="index.html">HOME</a>
-        <a href="Bio.html">ABOUT</a>
-        <a href="Resume.html">RESUME</a>
-        <a href="Graphic Design.html">GRAPHIC DESIGN</a>
-        <a href="Projects.html">PROJECTS</a>
-        <a href="Games.html">GAMES</a>
-        <a href="Contacts.html">CONTACT</a>
-    </ul>
+<div id="nav" class="menu-wrap">
+    <nav class="menu">
+        <ul class="clearfix">
+            <li><a href="index.html">HOME</a></li>
+            <li><a href="Bio.html">ABOUT</a></li>
+            <li><a href="Resume.html">RESUME</a></li>
+            <li><a href="Graphic Design.html">GRAPHIC DESIGN</a></li>
+            <li>
+                <a id="nav_proj" href="Projects.html">PROJECTS</a>
+                <ul class="sub-menu">
+                    <li><a href="Projects.html">All</a></li>
+                    <li><a href="proj_frc.html">FIRST Robotics</a></li>
+                    <li><a href="index.html">Personal Website</a></li>
+                </ul>
+            </li>
+            <li><a href="Games.html">GAMES</a></li>
+            <li><a href="Contacts.html">CONTACT</a></li>
+        </ul>
+    </nav>
 </div>
 
 <div id = "title_">
