--- a/proj_frc.html
+++ b/proj_frc.html
@@ -3,11 +3,10 @@
 <head>
     <script src="JS/jquery.js"></script>
     <script src="JS/common_jquery.js"></script>
-    <script src="JS/proj_js.js"></script>
     <meta charset="utf-8">
-    <title>Projects</title>
+    <title>FIRST ROBOTICS</title>
     <link rel="icon" href="Images/icon png.png">
-    <link href="CSS/proj_css.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="CSS/proj_frc_css.css" rel="stylesheet" type="text/css" media="screen">
     <link href="CSS/common.css" rel="stylesheet" type="text/css" media="screen">
 </head>
 
@@ -34,32 +33,10 @@
     </nav>
 </div>
 
-<div id="dropdown">
-    <a id="dropfirst" href="Projects.html">All</a>
-    <a href="proj_frc.html">FIRST Robotics</a>
+<div id = "testing">
+
 </div>
 
-<div id = "typography">
-</div>
-
-<div id = proj_contents>
-    <div id="col1" style="text-align: left">
-        <div id="col1_item1">
-            <h2>Personal Website</h2>
-            <p>Personal website entirely coded from scratch using HTML, CSS, JavaScript, jQuery and more. In fact, you are viewing it right now. </p>
-            <a href="index.html">View project</a>
-            <img src="Images/proj3.png">
-        </div>
-    </div>
-    <div id="col2">
-        <div id="col2_item1" style="text-align: left">
-            <h2>FIRST Robotics</h2>
-            <p>A series of robotics projects I had worked on for three years, and a series of projects that left huge impact on me. </p>
-            <a href="proj_frc.html">View project</a>
-            <img src="Images/frc.png">
-        </div>
-    </div>
-</div>
 
 <div id="footer" class="_center">
     <h4> &copy; JING WEI LI 2017</h4>
