Finished FRC Project Page

--- a/proj_frc.html
+++ b/proj_frc.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <script src="JS/jquery.js"></script>
+    <script src="JS/frc_js.js"></script>
     <script src="JS/common_jquery.js"></script>
     <meta charset="utf-8">
     <title>FIRST ROBOTICS</title>
@@ -33,13 +34,55 @@
     </nav>
 </div>
 
-<div id = "testing">
+<div id = "intro">
+    <div id="text_wrap">
+        <h1>FIRST Robotics</h1>
+        <h2>Three years of participation.</h2>
+        <h2>Three brilliant robots. </h2>
+        <h2>Three Awards.</h2>
+        <h2><strong>Infinite impact.</strong></h2>
+    </div>
+</div>
 
+<div id ="algo" class="fullscreen-bg">
+    <video loop muted autoplay class="fullscreen-bg__video">
+        <source src="Images/auto_correct.mp4" type="video/mp4">
+    </video>
+    <div id="text_sec">
+        <h1>Developed a <br>Course-correction<br> Algorithm</h1>
+        <h2>It drives straight no<br>matter how you kick it.<br>The algorithm is deployed<br>with the help of an<br>onboard gyroscope.</h2>
+    </div>
+</div>
+
+<div id="descrip">
+    <div id="descrip_txt">
+        <h1>Head Programmer</h1>
+        <p> Since my inception in robotics back in 2013, I have always been the go-to person when it comes to programming the robot. I taught
+            coding to a group of 20 students, established my foundation in programming with Java, and led the programing team to code 3 perfectly
+            functional robots with two of them ranking top 10 in FRC NYC competition. In April 2016, I won the MVP award given by FRC Long Island.</p>
+    </div>
+</div>
+
+<div id="vids">
+    <div id="vid_txt">
+        <h1>Videos, Videos, and Videos </h1>
+        <p> During these 3 years, I've also developed a firm interest in video production. As a result, I've filmed and produced professional videos
+            documenting the building season and the competitions, accumulating over 20,000 views.I've also mastered video editing
+            software including Adobe Premiere Pro, Adobe After Effects as well as Adobe Audition. Below are two of my best videos.</p>
+    </div>
+        <div style="margin-top: 3%">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/9hqpB1AoOpU" frameborder="0" allowfullscreen></iframe>
+            <iframe style="margin-left: 3%" width="560" height="315" src="https://www.youtube.com/embed/ZjXJVdk_eOc" frameborder="0" allowfullscreen></iframe>
+        </div>
 </div>
 
 
 <div id="footer" class="_center">
-    <h4> &copy; JING WEI LI 2017</h4>
+    <div id="footer_container">
+        <h2> Give FRC Team 1635 Some Support By Visiting Their Website!</h2>
+        <a href="http://team1635.org/" target="_blank">Visit the Website</a>
+        <h4>&copy; JING WEI LI 2017</h4>
+    </div>
 </div>
 
 </body>
